tests/fail/fun-app/head-not-fun.pion.snap
exit status: 0
stdout:
#error : #error

stderr:
error: tried to apply argument to non-function expression
  ┌─ tests/fail/fun-app/head-not-fun.pion:3:1
  │
3 │ Bool false
  │ ^^^^ ----- argument
  │ │     
  │ expression of type `Type`

